Add Waimanalo post and new galleries

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -131,6 +131,21 @@
             <p class="about-item-dates">Jun 2020 – Aug 2022</p>
             <p class="about-item-body">In June 2020, I started an apprenticeship with Trees, LLC, which was initially a blast. My older brother Luke taught me much of what I needed to know, along with my foreman at the time, Shiloh. We worked hard and genuinely had a good time.</p>
             <p class="about-item-body">Towards the end of my apprenticeship, tree trimming no longer felt rewarding. It was just a paycheck, and I’ve always been excited to learn new things. Doing the same task daily drained the excitement I had experienced elsewhere.</p>
+            <a class="about-carousel-link" href="/about-me/trees-llc/" aria-label="Open Trees, LLC photos gallery">
+            <div class="about-carousel" data-carousel aria-label="Trees, LLC photos">
+              <div class="about-carousel-track">
+                <img src="/assets/Trees%20LLC/20200910_134545.jpg" alt="Trees, LLC photo 1" loading="lazy" decoding="async" />
+                <img src="/assets/Trees%20LLC/20210921_092057.jpg" alt="Trees, LLC photo 2" loading="lazy" decoding="async" />
+                <img src="/assets/Trees%20LLC/IMG_20200723_122054.jpg" alt="Trees, LLC photo 3" loading="lazy" decoding="async" />
+                <img src="/assets/Trees%20LLC/IMG_20200813_122627.jpg" alt="Trees, LLC photo 4" loading="lazy" decoding="async" />
+                <img src="/assets/Trees%20LLC/PSX_20200612_215453.jpg" alt="Trees, LLC photo 5" loading="lazy" decoding="async" />
+                <img src="/assets/Trees%20LLC/PSX_20200913_103340.jpg" alt="Trees, LLC photo 6" loading="lazy" decoding="async" />
+                <img src="/assets/Trees%20LLC/PSX_20210221_073710.jpg" alt="Trees, LLC photo 7" loading="lazy" decoding="async" />
+                <img class="carousel-focus-top" src="/assets/Trees%20LLC/Snapchat-1055423625.jpg" alt="Trees, LLC photo 8" loading="lazy" decoding="async" />
+              </div>
+            </div>
+            <span class="about-carousel-caption">Click to view the full Trees, LLC photos gallery.</span>
+            </a>
           </article>
 
           <article class="about-item">
@@ -139,6 +154,16 @@
             <p class="about-item-dates">Sep 2021 – Mar 2022</p>
             <p class="about-item-body">During my apprenticeship, I enrolled in the EMT program at Klamath Community College, attending classes after work from 5:00–9:00 PM on Mondays and Wednesdays, and 7:00–9:00 PM on Fridays.</p>
             <p class="about-item-body">Inspired by my family’s volunteer spirit and my own experiences, I pursued emergency medical training as a way to give back to the community that had given me so much. The program reinforced my interest in service-oriented work and deepened my respect for the responsibility involved in caring for others during critical moments.</p>
+            <a class="about-carousel-link" href="/about-me/emt/" aria-label="Open EMT training photos gallery">
+            <div class="about-carousel" data-carousel aria-label="EMT training photos">
+              <div class="about-carousel-track">
+                <img class="carousel-focus-top carousel-focus-emt" src="/assets/EMT/20220214_195007.jpg" alt="EMT training photo 1" loading="lazy" decoding="async" />
+                <img src="/assets/EMT/20220310_165336.jpg" alt="EMT training photo 2" loading="lazy" decoding="async" />
+                <img src="/assets/EMT/A7307514.jpg" alt="EMT training photo 3" loading="lazy" decoding="async" />
+              </div>
+            </div>
+            <span class="about-carousel-caption">Click to view the full EMT training photos gallery.</span>
+            </a>
           </article>
 
           <article class="about-item about-item--group">
@@ -148,7 +173,9 @@
               <div class="about-subitem">
                 <p class="about-subitem-title">Travel</p>
                 <p class="about-subitem-org">Hawaii</p>
-                <p class="about-subitem-body">(additional context to be added later)</p>
+                <p class="about-subitem-body">
+                  <a href="/blog/post/waimanalo-beach-a-hard-lesson.html">Read the story: Waimanalo Beach — A Hard Lesson</a>
+                </p>
               </div>
               <div class="about-subitem">
                 <p class="about-subitem-title">Travel</p>
