--- a/about-me/index.html
+++ b/about-me/index.html
@@ -43,17 +43,17 @@
       <section class="about-section" aria-labelledby="about-intro">
         <h2 id="about-intro" class="about-section-title">Overview</h2>
         <p class="about-body">Growing up in the close-knit community of Bly, Oregon, I developed a deep, lifelong connection to my hometown. My passion for writing, photography, and videography was sparked by a desire to capture and preserve meaningful moments.</p>
-        <p class="about-body">From restoring a local gym to working abroad in New Zealand, and serving my community as a firefighter, each of these moments has taught me invaluable lessons about resilience, compassion, and the power of hard work. Each experience, and every person who has been a part of my journey, has equally contributed to who I am today.</p>
+        <p class="about-body">From restoring a local gym to working abroad in New Zealand, and serving my community as a firefighter, each of these moments has taught me invaluable lessons about resilience and compassion. Each experience, and every person who has been a part of my journey, has equally contributed to who I am today.</p>
       </section>
 
       <section class="about-section" aria-labelledby="about-timeline">
         <h2 id="about-timeline" class="about-section-title">Timeline</h2>
         <div class="about-timeline">
           <article class="about-item">
-            <p class="about-item-role">Project Manager</p>
+            <p class="about-item-role">Project Manager /</p>
             <p class="about-item-org">Ruth Obenchain Recreation Center (formerly the Gearhart Gym)</p>
             <p class="about-item-dates">Aug 2016 – Present</p>
-            <p class="about-item-body">As Project Manager and CEO, I have overseen the long-term restoration and operation of the Ruth Obenchain Recreation Center. This includes coordinating volunteers, managing memberships, organizing events, and guiding both current and future improvement projects. What started as a restoration effort has become a long-term commitment to maintaining and growing a space for the Bly community.</p>
+            <p class="about-item-body">As Project Manager / CEO, I have overseen the long-term restoration and operation of the Ruth Obenchain Recreation Center. This includes coordinating volunteers, managing memberships, organizing events, and guiding both current and future improvement projects. What started as a restoration effort has become a long-term commitment to maintaining and growing a space for the Bly community.</p>
             <p class="about-item-body"><a href="https://www.ruthobenchainrc.com/about-rorc/" target="_blank" rel="noopener">Ruth Obenchain Recreation Center Website (Learn More)</a></p>
             <a class="about-carousel-link" href="/about-me/rorc/" aria-label="Open Ruth Obenchain Recreation Center gallery">
               <div class="about-carousel" data-carousel aria-label="Ruth Obenchain Recreation Center photos">
@@ -98,7 +98,7 @@
             <p class="about-item-role">Work &amp; Travel Abroad</p>
             <p class="about-item-org">Brightview Dairy — New Zealand</p>
             <p class="about-item-dates">Sep 2019 – Mar 2020</p>
-            <p class="about-item-body">Two years after my mom hosted a foreign exchange student, Nicole, who came from New Zealand, her family came to visit us before she returned home. Her dad briefly mentioned there might be an opportunity for me to come over and work for them. They owned Brightview Dairy.</p>
+            <p class="about-item-body">My mom hosted a foreign exchange student, Nicole, who came from New Zealand, and her family came to visit us before she returned home. Her dad briefly mentioned there might be an opportunity for me to come over and work for them. They owned Brightview Dairy.</p>
             <p class="about-item-body">Two years later, I reached out to Nicole and asked if that opportunity was still an option. It was. Within a month, I got my things together and went to New Zealand, where I lived and worked until March 2020.</p>
             <p class="about-item-body">As COVID began to emerge globally, I made the decision to return to the United States, unsure whether waiting longer would leave me unable to get home.</p>
             <p class="about-item-body">When I landed in Reno, Nevada, I got off the plane and went to get into an Uber, assuming life continued on the same way it had in New Zealand. I attempted to hop into the passenger seat so I could have a conversation with the driver, but before I even got in, he took me aside. He handed me a mask, squirted hand sanitizer into my hand, and told me I needed to sit in the back seat.</p>
@@ -130,7 +130,7 @@
             <p class="about-item-org">Trees, LLC</p>
             <p class="about-item-dates">Jun 2020 – Aug 2022</p>
             <p class="about-item-body">In June 2020, I started an apprenticeship with Trees, LLC, which was initially a blast. My older brother Luke taught me much of what I needed to know, along with my foreman at the time, Shiloh. We worked hard and genuinely had a good time.</p>
-            <p class="about-item-body">Towards the end of my apprenticeship, tree trimming no longer felt rewarding. It was just a paycheck, and I’ve always been excited to learn new things. Doing the same task daily drained the excitement I had experienced elsewhere.</p>
+            <p class="about-item-body">Towards the end of my apprenticeship, tree trimming no longer felt rewarding. It was just a paycheck, and I’ve always been excited to learn new things. Doing the same task daily drained the excitement I had experienced elsewhere, but I finished the apprenticeship early and got my journeyman card.</p>
             <a class="about-carousel-link" href="/about-me/trees-llc/" aria-label="Open Trees, LLC photos gallery">
             <div class="about-carousel" data-carousel aria-label="Trees, LLC photos">
               <div class="about-carousel-track">
@@ -152,7 +152,7 @@
             <p class="about-item-role">Emergency Medical Technician</p>
             <p class="about-item-org">Klamath Community College</p>
             <p class="about-item-dates">Sep 2021 – Mar 2022</p>
-            <p class="about-item-body">During my apprenticeship, I enrolled in the EMT program at Klamath Community College, attending classes after work from 5:00–9:00 PM on Mondays and Wednesdays, and 7:00–9:00 PM on Fridays.</p>
+            <p class="about-item-body">During my apprenticeship, I enrolled in the EMT program at Klamath Community College, attending classes after work from 5:00–9:00 PM on Mondays and Wednesdays, and 5:00–7:00 PM on Fridays.</p>
             <p class="about-item-body">Inspired by my family’s volunteer spirit and my own experiences, I pursued emergency medical training as a way to give back to the community that had given me so much. The program reinforced my interest in service-oriented work and deepened my respect for the responsibility involved in caring for others during critical moments.</p>
             <a class="about-carousel-link" href="/about-me/emt/" aria-label="Open EMT training photos gallery">
             <div class="about-carousel" data-carousel aria-label="EMT training photos">
@@ -189,7 +189,7 @@
           </article>
 
           <div class="about-note">
-            <p class="about-body">Before returning to Trees, I was fortunate that my former foreman, Shiloh, was now the general foreman and offered me my job back. However, the union asked if I would first take a short-term assignment with West Lane Tree Service in Christmas Valley, as they needed an equipment operator for that time.</p>
+            <p class="about-body">Before returning to Trees, the union asked if I would first take a short-term assignment with West Lane Tree Service in Christmas Valley, as they needed an equipment operator for that time.</p>
           </div>
 
           <article class="about-item">
