Switch to clean URLs

--- a/PublicRecordsApp/index.html
+++ b/PublicRecordsApp/index.html
@@ -495,7 +495,7 @@
           Public Records Database — by Quentin Nichols
         </div>
         <div class="header-actions">
-          <a class="header-pill" href="/index.html">QuentinNichols.com</a>
+          <a class="header-pill" href="/">QuentinNichols.com</a>
         </div>
       </div>
 
@@ -514,7 +514,7 @@
       <h2>Make public records easy to find</h2>
       <p>Search, preview, and download records in seconds. Built to keep recurring documents accessible.</p>
       <div class="cta-row">
-        <a class="cta" href="/PublicRecordsApp/demo.html">Try a demo</a>
+        <a class="cta" href="/PublicRecordsApp/demo/">Try a demo</a>
         <button class="cta link-btn" type="button" data-open-modal>Public example</button>
       </div>
       <p class="page-subtitle">Preview a live public records site and return here anytime.</p>
