--- a/about-me/index.html
+++ b/about-me/index.html
@@ -16,7 +16,7 @@
         <span></span>
       </summary>
       <div class="nav-menu-panel">
-        <a href="/index.html">Home</a>
+        <a href="/">Home</a>
         <a href="/photography/">Photography</a>
         <a href="/projects/">Projects</a>
         <a href="/blog/">Blog</a>
@@ -24,7 +24,7 @@
         <a href="https://shop.quentinnichols.com/" target="_blank" rel="noopener">Shop</a>
       </div>
     </details>
-    <a class="nav-logo" href="/index.html">
+    <a class="nav-logo" href="/">
       <img src="/assets/Watermark (1) copy.png" alt="Bly Quentin Nichols Oregon">
     </a>
     <div class="nav-spacer" aria-hidden="true"></div>
@@ -174,7 +174,7 @@
                 <p class="about-subitem-title">Travel</p>
                 <p class="about-subitem-org">Hawaii</p>
                 <p class="about-subitem-body">
-                  <a href="/blog/post/waimanalo-beach-a-hard-lesson.html">Read the story: Waimanalo Beach — A Hard Lesson</a>
+                  <a href="/blog/post/waimanalo-beach-a-hard-lesson/">Read the story: Waimanalo Beach — A Hard Lesson</a>
                 </p>
               </div>
               <div class="about-subitem">
