--- a/projects/index.html
+++ b/projects/index.html
@@ -142,7 +142,7 @@
         <span></span>
       </summary>
       <div class="nav-menu-panel">
-        <a href="/index.html">Home</a>
+        <a href="/">Home</a>
         <a href="/photography/">Photography</a>
         <a href="/projects/">Projects</a>
         <a href="/blog/">Blog</a>
@@ -150,7 +150,7 @@
         <a href="https://shop.quentinnichols.com/" target="_blank" rel="noopener">Shop</a>
       </div>
     </details>
-    <a class="nav-logo" href="/index.html">
+    <a class="nav-logo" href="/">
       <img src="/assets/Watermark (1) copy.png" alt="Bly Quentin Nichols Oregon">
     </a>
     <div class="nav-spacer" aria-hidden="true"></div>
