Add Google Analytics

--- a/PublicRecordsApp/demo/index.html
+++ b/PublicRecordsApp/demo/index.html
@@ -525,6 +525,15 @@
       .modal-actions { width: 100%; justify-content: center; }
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ESFM9WKBF9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ESFM9WKBF9');
+  </script>
 </head>
 <body>
   <header>
