--- a/links/index.html
+++ b/links/index.html
@@ -6,6 +6,15 @@
   <title>Redirecting to Contact</title>
   <meta http-equiv="refresh" content="0; url=/contact/">
   <link rel="canonical" href="/contact/">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ESFM9WKBF9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ESFM9WKBF9');
+  </script>
 </head>
 <body>
   <p>Redirecting to <a href="/contact/">/contact/</a>…</p>
